- Fixed spacing around login form div - Removed empty form from inside <p> tag when logged in

--- a/src/ui/gui.css
+++ b/src/ui/gui.css
@@ -39,7 +39,8 @@ div#login_header {
 
 div.login {
     text-align: left;
-    padding: 5px;
+    padding-left: 5px;
+    padding-bottom: 5px;
 }
 
 div#login_header p {
